[package]
name = "enphase_envoy_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive", "env", "color", "usage", "help"] }
axum = { version = "0.6", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1.25", default-features = false, features = ["macros", "rt"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "multipart", "json"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_derive = { version = "1.0", default-features = false }
prometheus-client = { version = "0.19", default-features = false }
